secgroup.tf
resource "aws_security_group" "itiSsh" {
  name        = "allow ssh"
  description = "Allow ssh inbound traffic"
  vpc_id      = module.iti.vpc_id

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}
